@@ -8,7 +8,7 @@ INCLUDES = $(XORG_INCS)
 
 AM_CFLAGS = $(XORG_CFLAGS) @SERVER_DEFINES@ @LOADER_DEFINES@
 
-libdummy_a_SOURCES = getvalidbios.c \
+libdummy_a_SOURCES = getvalidbios.c getemptypci.c \
                      pcitestmulti.c xf86allocscripi.c \
                      xf86addrestolist.c xf86drvmsg.c xf86drvmsgverb.c \
                      xf86getverb.c \
@@ -20,6 +20,7 @@ libdummy_a_SOURCES = getvalidbios.c \
 libdummy_nonserver_a_SOURCES = \
 	fatalerror.c \
 	getvalidbios.c \
+	getemptypci.c \
 	logvwrite.c \
 	pcitestmulti.c \
 	verrorf.c \
