@@ -1,0 +1,19 @@
+
+#ifdef HAVE_XORG_CONFIG_H
+#include <xorg-config.h>
+#endif
+
+#include <X11/X.h>
+#include "os.h"
+#include "xf86.h"
+#include "xf86Priv.h"
+
+/*
+ * Utility functions required by libxf86_os. 
+ */
+
+memType
+getEmptyPciRange(PCITAG tag, int base_reg)
+{
+    return 0;
+}
